# starlink_connectivity_tools.py

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  FEATURES_IMPLEMENTED.md  INSTALL.md  README.md  REPOSITORY_STRUCTURE.md  config.example.yml  config.json  cookies.json.example  docker-compose.yml  example.py  examples.py  pyproject.toml  remote_access_example.py  requirements.txt  setup.py  starlink-cli-completion.sh  starlink_client.py  starlink_config.example.json  starlink_connectivity.py  starlink_connectivity_tools.py  starlink_monitor.py  test_starlink.py
cli/: __init__.py  starlink_cli.py
docs/: README.md
examples/: README.md  __init__.py  advanced_screening.py  automatic_failover.py  basic_status.py  basic_usage.py  custom_addresses.py  device_info.py  emergency_mode.py  extract_proto.py  file_upload.py  get_diagnostics.py  low_power_mode.py  low_power_operation.py  medical_emergency.py  medical_mission_scenario.py  ping_monitoring.py  power_network_scenario.py  remote_access.py  simple_failover.py  speed_test.py  venezuela_crisis_scenario.py  venezuela_scenario.py
src/: __init__.py  bandwidth_optimizer.py  config.py  connection_manager.py  diagnostics.py  failover_handler.py  power_manager.py  starlink_monitor.py
src/config/: __init__.py  settings.py
src/starlink_connectivity_tools/: __init__.py  crisis_monitor.py  diagnostics.py  satellite_connection_manager.py  starlink_api.py  starlink_monitor_cli.py
starlink_client/: __init__.py  client.py  models.py
starlink_connectivity/: __init__.py  optimizer.py
starlink_connectivity_tools/: STARLINK_UK_NOTE.md  __init__.py  accounts.py  addresses.py  client.py  connectivity.py  data_usage.py  dish.py  emergency_mode.py  exceptions.py  failover.py  models.py  reflection.py  routers.py  service_lines.py  space_safety_api.py  starlink_dish.py  subscriptions.py  tls.py  user_terminals.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_bandwidth_optimizer.py  test_cli.py  test_client.py  test_connection_manager.py  test_connectivity.py  test_crisis_monitor.py  test_diagnostics.py  test_failover.py  test_optimizer.py  test_reflection.py  test_starlink.py  test_starlink_api.py  test_utils.py
tools/: README.md  connectivity_dashboard.py  starlink_monitor_cli.py  starlink_simple_monitor.py
