[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starlink-connectivity-tools"
version = "0.1.0"
description = "Tools for monitoring and managing Starlink satellite connectivity"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Daniel Azevedo Novais", email = "daniel.novais@sempreceub.com"}
]
keywords = ["starlink", "satellite", "connectivity", "monitoring", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]

[project.scripts]
starlink-cli = "cli.starlink_cli:main"

[project.urls]
Homepage = "https://github.com/danielnovais-tech/starlink_connectivity_tools.py"
Repository = "https://github.com/danielnovais-tech/starlink_connectivity_tools.py"
Documentation = "https://github.com/danielnovais-tech/starlink_connectivity_tools.py#readme"
"Bug Tracker" = "https://github.com/danielnovais-tech/starlink_connectivity_tools.py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
