[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "starlink-connectivity-tools"
version = "0.1.0"
description = "Ferramentas de conectividade para Starlink"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Daniel Novais", email = "daniel@example.com" }
]
keywords = ["starlink", "satellite", "connectivity", "grpc", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "requests>=2.31",
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "grpcio-reflection>=1.50.0",
    "protobuf>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["starlink_connectivity_tools*", "starlink_client*", "starlink_connectivity*", "cli*"]
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "grpc-stubs>=1.50.0",
    "types-protobuf>=4.21.0",
]